# theattyr

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  cliff.toml  release-plz.toml
.github/workflows/: ci.yml  dist.yml  release-plz.yml  release.yml
src/: animation.rs  app.rs  args.rs  event.rs  fps.rs  lib.rs  main.rs
vt100/: bambi_godzila  barney.vt  beer.vt  bevis.butthead.vt  blinkeyes.vt  bomb.vt  bugsbunny.vt  cartwhee.vt  castle.vt  cert18.vt  cow.vt  cowboom.vt  crash.vt  cursor.vt  delay.vt  demo.vt  dirty.vt  dogs.vt  dont-wor.vt  dontworry.vt  duckpaint.vt  firework.vt  fireworks.vt  fishy-fishy.vt  fishy.vt  fishy2.vt  flatmap.vt  frogs.vt  glass.vt  hallow.vt  hello.vt  juanspla.vt  july.4.vt  jumble.vt  maingate.vt  mark_twain.vt  monkey.vt  monorail.vt  moon.animation  movglobe.vt  (+50 more)
